<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoClaro"
    tools:context=".SecondFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_edif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:text="@string/nombreEdi"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_dep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/numeroEdi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_edif"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/check1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edif" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/check2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/check3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/check4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch4">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regular" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Malas" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Puntaje"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvPuntos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Puntos"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/fondoBarra"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"

        android:layout_marginEnd="32dp"
        android:background="#DF5858"
        android:src="@drawable/button_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPuntos"
        app:layout_constraintVertical_bias="0.8" />

    <ImageButton
        android:id="@+id/ibSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fondoBarra"
        app:layout_constraintStart_toEndOf="@+id/ibAlert"
        app:layout_constraintTop_toBottomOf="@+id/tvPuntos"
        app:layout_constraintVertical_bias="0.86" />

    <ImageButton
        android:id="@+id/ibAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorConto"
        android:backgroundTint="@color/colorConto"
        android:src="@android:drawable/ic_menu_report_image"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fondoBarra"
        app:layout_constraintStart_toStartOf="@+id/fondoBarra"
        app:layout_constraintTop_toBottomOf="@+id/tvPuntos"
        app:layout_constraintVertical_bias="0.86" />

    <ImageButton
        android:id="@+id/ibCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:src="@android:drawable/ic_menu_slideshow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibAlert"
        app:layout_constraintStart_toStartOf="@+id/fondoBarra"
        app:layout_constraintTop_toBottomOf="@+id/tvPuntos"
        app:layout_constraintVertical_bias="0.86" />

    <TextView
        android:id="@+id/tvCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calcular"
        app:layout_constraintBottom_toTopOf="@+id/ibCalcular"
        app:layout_constraintEnd_toEndOf="@+id/ibCalcular"
        app:layout_constraintStart_toStartOf="@+id/ibCalcular" />

    <TextView
        android:id="@+id/tvEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ibAlert"
        app:layout_constraintEnd_toEndOf="@+id/ibAlert"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/ibAlert" />

    <TextView
        android:id="@+id/tvGrabar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Grabar"
        app:layout_constraintBottom_toTopOf="@+id/ibSave"
        app:layout_constraintEnd_toEndOf="@+id/ibSave"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="@+id/ibSave" />

</androidx.constraintlayout.widget.ConstraintLayout>