<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorFondoClaro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_edi"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:alpha="0.5"
            android:background="@drawable/back"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nombreEdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nombreEdi"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_edi"
            app:layout_constraintEnd_toEndOf="@+id/img_edi"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_edi"
            app:layout_constraintTop_toTopOf="@+id/img_edi"
            app:layout_constraintVertical_bias="0.115" />

        <TextView
            android:id="@+id/tv_numeroEdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/numeroEdi"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/img_edi"
            app:layout_constraintTop_toBottomOf="@+id/tv_nombreEdi" />

        <TextView
            android:id="@+id/tv_direcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/direccEdi"
            android:textColor="#000000"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/img_edi"
            app:layout_constraintTop_toBottomOf="@+id/tv_numeroEdi" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>